Clean data and update answers in answers.md

--- a/main.ipynb
+++ b/main.ipynb
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +365,7 @@
     "\n",
     "    fig = go.Figure()\n",
     "    for i in range(len(y)):\n",
-    "        fig.add_trace(go.Scatter(x=x, y=y[i], mode=\"lines\", name=name[i], fill='tozeroy'))\n",
+    "        fig.add_trace(go.Scatter(x=x, y=y[i], mode=\"lines\", name=name[i]))\n",
     "\n",
     "    fig.update_layout(\n",
     "        title=\"Cumulative Jobs Posted Over Time\",\n",
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -438,65 +438,6 @@
        },
        "data": [
         {
-         "fill": "tozeroy",
-         "mode": "lines",
-         "name": "Best Corp.",
-         "type": "scatter",
-         "x": [
-          "2021-01-06",
-          "2021-01-23",
-          "2021-01-25",
-          "2021-02-05",
-          "2021-02-17",
-          "2021-03-01",
-          "2021-03-06",
-          "2021-03-16",
-          "2021-04-25",
-          "2021-06-17",
-          "2021-06-20",
-          "2021-07-15",
-          "2021-08-01",
-          "2021-10-05",
-          "2022-02-03",
-          "2022-02-15",
-          "2022-03-07",
-          "2022-03-22",
-          "2022-03-29",
-          "2022-05-16",
-          "2022-05-31",
-          "2022-08-12",
-          "2022-09-21",
-          "2022-12-12"
-         ],
-         "y": [
-          0,
-          0,
-          1,
-          1,
-          1,
-          1,
-          2,
-          2,
-          2,
-          2,
-          2,
-          2,
-          2,
-          2,
-          2,
-          2,
-          2,
-          2,
-          2,
-          3,
-          3,
-          3,
-          3,
-          4
-         ]
-        },
-        {
-         "fill": "tozeroy",
          "mode": "lines",
          "name": "Infinite Solutions",
          "type": "scatter",
@@ -554,67 +495,8 @@
          ]
         },
         {
-         "fill": "tozeroy",
          "mode": "lines",
-         "name": "Global Enterprises",
-         "type": "scatter",
-         "x": [
-          "2021-01-06",
-          "2021-01-23",
-          "2021-01-25",
-          "2021-02-05",
-          "2021-02-17",
-          "2021-03-01",
-          "2021-03-06",
-          "2021-03-16",
-          "2021-04-25",
-          "2021-06-17",
-          "2021-06-20",
-          "2021-07-15",
-          "2021-08-01",
-          "2021-10-05",
-          "2022-02-03",
-          "2022-02-15",
-          "2022-03-07",
-          "2022-03-22",
-          "2022-03-29",
-          "2022-05-16",
-          "2022-05-31",
-          "2022-08-12",
-          "2022-09-21",
-          "2022-12-12"
-         ],
-         "y": [
-          1,
-          1,
-          1,
-          1,
-          1,
-          2,
-          2,
-          2,
-          3,
-          3,
-          4,
-          4,
-          4,
-          4,
-          4,
-          4,
-          4,
-          4,
-          5,
-          5,
-          5,
-          5,
-          5,
-          5
-         ]
-        },
-        {
-         "fill": "tozeroy",
-         "mode": "lines",
-         "name": "Fast Track Inc.",
+         "name": "Echo Enterprises",
          "type": "scatter",
          "x": [
           "2021-01-06",
@@ -654,10 +536,6 @@
           0,
           0,
           0,
-          0,
-          0,
-          0,
-          1,
           1,
           1,
           2,
@@ -666,61 +544,7 @@
           2,
           2,
           2,
-          2
-         ]
-        },
-        {
-         "fill": "tozeroy",
-         "mode": "lines",
-         "name": "Bright Future Enterprises",
-         "type": "scatter",
-         "x": [
-          "2021-01-06",
-          "2021-01-23",
-          "2021-01-25",
-          "2021-02-05",
-          "2021-02-17",
-          "2021-03-01",
-          "2021-03-06",
-          "2021-03-16",
-          "2021-04-25",
-          "2021-06-17",
-          "2021-06-20",
-          "2021-07-15",
-          "2021-08-01",
-          "2021-10-05",
-          "2022-02-03",
-          "2022-02-15",
-          "2022-03-07",
-          "2022-03-22",
-          "2022-03-29",
-          "2022-05-16",
-          "2022-05-31",
-          "2022-08-12",
-          "2022-09-21",
-          "2022-12-12"
-         ],
-         "y": [
-          0,
-          1,
-          1,
-          1,
-          1,
-          1,
-          1,
           2,
-          2,
-          3,
-          3,
-          3,
-          3,
-          3,
-          3,
-          3,
-          3,
-          3,
-          3,
-          3,
           3,
           3,
           3,
@@ -728,7 +552,6 @@
          ]
         },
         {
-         "fill": "tozeroy",
          "mode": "lines",
          "name": "Delta Inc.",
          "type": "scatter",
@@ -786,7 +609,120 @@
          ]
         },
         {
-         "fill": "tozeroy",
+         "mode": "lines",
+         "name": "Fast Track Inc.",
+         "type": "scatter",
+         "x": [
+          "2021-01-06",
+          "2021-01-23",
+          "2021-01-25",
+          "2021-02-05",
+          "2021-02-17",
+          "2021-03-01",
+          "2021-03-06",
+          "2021-03-16",
+          "2021-04-25",
+          "2021-06-17",
+          "2021-06-20",
+          "2021-07-15",
+          "2021-08-01",
+          "2021-10-05",
+          "2022-02-03",
+          "2022-02-15",
+          "2022-03-07",
+          "2022-03-22",
+          "2022-03-29",
+          "2022-05-16",
+          "2022-05-31",
+          "2022-08-12",
+          "2022-09-21",
+          "2022-12-12"
+         ],
+         "y": [
+          0,
+          0,
+          0,
+          0,
+          0,
+          0,
+          0,
+          0,
+          0,
+          0,
+          0,
+          0,
+          0,
+          0,
+          1,
+          1,
+          1,
+          2,
+          2,
+          2,
+          2,
+          2,
+          2,
+          2
+         ]
+        },
+        {
+         "mode": "lines",
+         "name": "Best Corp.",
+         "type": "scatter",
+         "x": [
+          "2021-01-06",
+          "2021-01-23",
+          "2021-01-25",
+          "2021-02-05",
+          "2021-02-17",
+          "2021-03-01",
+          "2021-03-06",
+          "2021-03-16",
+          "2021-04-25",
+          "2021-06-17",
+          "2021-06-20",
+          "2021-07-15",
+          "2021-08-01",
+          "2021-10-05",
+          "2022-02-03",
+          "2022-02-15",
+          "2022-03-07",
+          "2022-03-22",
+          "2022-03-29",
+          "2022-05-16",
+          "2022-05-31",
+          "2022-08-12",
+          "2022-09-21",
+          "2022-12-12"
+         ],
+         "y": [
+          0,
+          0,
+          1,
+          1,
+          1,
+          1,
+          2,
+          2,
+          2,
+          2,
+          2,
+          2,
+          2,
+          2,
+          2,
+          2,
+          2,
+          2,
+          2,
+          3,
+          3,
+          3,
+          3,
+          4
+         ]
+        },
+        {
          "mode": "lines",
          "name": "High Hopes Inc.",
          "type": "scatter",
@@ -844,9 +780,8 @@
          ]
         },
         {
-         "fill": "tozeroy",
          "mode": "lines",
-         "name": "Echo Enterprises",
+         "name": "Bright Future Enterprises",
          "type": "scatter",
          "x": [
           "2021-01-06",
@@ -876,29 +811,86 @@
          ],
          "y": [
           0,
-          0,
-          0,
-          0,
-          0,
-          0,
-          0,
-          0,
-          0,
-          0,
-          0,
+          1,
+          1,
+          1,
+          1,
           1,
           1,
           2,
           2,
-          2,
-          2,
-          2,
-          2,
-          2,
+          3,
+          3,
+          3,
+          3,
+          3,
+          3,
+          3,
+          3,
+          3,
+          3,
+          3,
           3,
           3,
           3,
           3
+         ]
+        },
+        {
+         "mode": "lines",
+         "name": "Global Enterprises",
+         "type": "scatter",
+         "x": [
+          "2021-01-06",
+          "2021-01-23",
+          "2021-01-25",
+          "2021-02-05",
+          "2021-02-17",
+          "2021-03-01",
+          "2021-03-06",
+          "2021-03-16",
+          "2021-04-25",
+          "2021-06-17",
+          "2021-06-20",
+          "2021-07-15",
+          "2021-08-01",
+          "2021-10-05",
+          "2022-02-03",
+          "2022-02-15",
+          "2022-03-07",
+          "2022-03-22",
+          "2022-03-29",
+          "2022-05-16",
+          "2022-05-31",
+          "2022-08-12",
+          "2022-09-21",
+          "2022-12-12"
+         ],
+         "y": [
+          1,
+          1,
+          1,
+          1,
+          1,
+          2,
+          2,
+          2,
+          3,
+          3,
+          4,
+          4,
+          4,
+          4,
+          4,
+          4,
+          4,
+          4,
+          5,
+          5,
+          5,
+          5,
+          5,
+          5
          ]
         }
        ],
@@ -1746,6 +1738,132 @@
    ],
    "source": [
     "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Average Price of Posted Jobs by Companies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><style>\n",
+       ".dataframe > thead > tr,\n",
+       ".dataframe > tbody > tr {\n",
+       "  text-align: right;\n",
+       "  white-space: pre-wrap;\n",
+       "}\n",
+       "</style>\n",
+       "<small>shape: (9, 7)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>company_name</th><th>number_of_employees</th><th>establishment_date</th><th>avg_price</th><th>min_price</th><th>max_price</th><th>std_price</th></tr><tr><td>str</td><td>i64</td><td>date</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td></tr></thead><tbody><tr><td>&quot;Infinite Solut…</td><td>436</td><td>2021-03-12</td><td>750.949091</td><td>46.15</td><td>5898.0</td><td>1711.470019</td></tr><tr><td>&quot;Delta Inc.&quot;</td><td>662</td><td>2020-11-06</td><td>317.613333</td><td>63.72</td><td>488.1</td><td>143.258997</td></tr><tr><td>&quot;Global Enterpr…</td><td>896</td><td>2022-02-03</td><td>294.446875</td><td>1.77</td><td>466.63</td><td>174.347309</td></tr><tr><td>&quot;Acme Inc.&quot;</td><td>404</td><td>2019-12-31</td><td>281.751111</td><td>36.27</td><td>464.94</td><td>157.763981</td></tr><tr><td>&quot;High Hopes Inc…</td><td>812</td><td>2020-03-17</td><td>280.988</td><td>12.39</td><td>449.49</td><td>167.136731</td></tr><tr><td>&quot;Echo Enterpris…</td><td>255</td><td>2022-05-05</td><td>276.063333</td><td>4.83</td><td>499.23</td><td>194.996285</td></tr><tr><td>&quot;Fast Track Inc…</td><td>374</td><td>2020-03-08</td><td>257.565</td><td>67.15</td><td>440.43</td><td>130.624846</td></tr><tr><td>&quot;Bright Future …</td><td>222</td><td>2020-11-14</td><td>239.06125</td><td>77.28</td><td>498.05</td><td>150.577506</td></tr><tr><td>&quot;Best Corp.&quot;</td><td>229</td><td>2021-03-21</td><td>212.288</td><td>11.83</td><td>440.71</td><td>174.053786</td></tr></tbody></table></div>"
+      ],
+      "text/plain": [
+       "shape: (9, 7)\n",
+       "┌───────────────┬───────────────┬───────────────┬────────────┬───────────┬───────────┬─────────────┐\n",
+       "│ company_name  ┆ number_of_emp ┆ establishment ┆ avg_price  ┆ min_price ┆ max_price ┆ std_price   │\n",
+       "│ ---           ┆ loyees        ┆ _date         ┆ ---        ┆ ---       ┆ ---       ┆ ---         │\n",
+       "│ str           ┆ ---           ┆ ---           ┆ f64        ┆ f64       ┆ f64       ┆ f64         │\n",
+       "│               ┆ i64           ┆ date          ┆            ┆           ┆           ┆             │\n",
+       "╞═══════════════╪═══════════════╪═══════════════╪════════════╪═══════════╪═══════════╪═════════════╡\n",
+       "│ Infinite      ┆ 436           ┆ 2021-03-12    ┆ 750.949091 ┆ 46.15     ┆ 5898.0    ┆ 1711.470019 │\n",
+       "│ Solutions     ┆               ┆               ┆            ┆           ┆           ┆             │\n",
+       "│ Delta Inc.    ┆ 662           ┆ 2020-11-06    ┆ 317.613333 ┆ 63.72     ┆ 488.1     ┆ 143.258997  │\n",
+       "│ Global        ┆ 896           ┆ 2022-02-03    ┆ 294.446875 ┆ 1.77      ┆ 466.63    ┆ 174.347309  │\n",
+       "│ Enterprises   ┆               ┆               ┆            ┆           ┆           ┆             │\n",
+       "│ Acme Inc.     ┆ 404           ┆ 2019-12-31    ┆ 281.751111 ┆ 36.27     ┆ 464.94    ┆ 157.763981  │\n",
+       "│ High Hopes    ┆ 812           ┆ 2020-03-17    ┆ 280.988    ┆ 12.39     ┆ 449.49    ┆ 167.136731  │\n",
+       "│ Inc.          ┆               ┆               ┆            ┆           ┆           ┆             │\n",
+       "│ Echo          ┆ 255           ┆ 2022-05-05    ┆ 276.063333 ┆ 4.83      ┆ 499.23    ┆ 194.996285  │\n",
+       "│ Enterprises   ┆               ┆               ┆            ┆           ┆           ┆             │\n",
+       "│ Fast Track    ┆ 374           ┆ 2020-03-08    ┆ 257.565    ┆ 67.15     ┆ 440.43    ┆ 130.624846  │\n",
+       "│ Inc.          ┆               ┆               ┆            ┆           ┆           ┆             │\n",
+       "│ Bright Future ┆ 222           ┆ 2020-11-14    ┆ 239.06125  ┆ 77.28     ┆ 498.05    ┆ 150.577506  │\n",
+       "│ Enterprises   ┆               ┆               ┆            ┆           ┆           ┆             │\n",
+       "│ Best Corp.    ┆ 229           ┆ 2021-03-21    ┆ 212.288    ┆ 11.83     ┆ 440.71    ┆ 174.053786  │\n",
+       "└───────────────┴───────────────┴───────────────┴────────────┴───────────┴───────────┴─────────────┘"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(\n",
+    "    companies\n",
+    "    .join(jobs, on=\"company_id\")\n",
+    "    .group_by(\"company_name\", \"number_of_employees\", \"establishment_date\")\n",
+    "    .agg(avg_price=pl.mean(\"price\"), min_price=pl.min(\"price\"), max_price=pl.max(\"price\"), std_price=pl.std(\"price\"))\n",
+    "    .sort(\"avg_price\", descending=True)\n",
+    "    .collect()\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><style>\n",
+       ".dataframe > thead > tr,\n",
+       ".dataframe > tbody > tr {\n",
+       "  text-align: right;\n",
+       "  white-space: pre-wrap;\n",
+       "}\n",
+       "</style>\n",
+       "<small>shape: (8, 4)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>company_name</th><th>number_of_employees</th><th>posted_jobs</th><th>posted_jobs_per_employee</th></tr><tr><td>str</td><td>i64</td><td>u32</td><td>f64</td></tr></thead><tbody><tr><td>&quot;Best Corp.&quot;</td><td>229</td><td>4</td><td>0.017467</td></tr><tr><td>&quot;Bright Future …</td><td>222</td><td>3</td><td>0.013514</td></tr><tr><td>&quot;Echo Enterpris…</td><td>255</td><td>3</td><td>0.011765</td></tr><tr><td>&quot;Delta Inc.&quot;</td><td>662</td><td>4</td><td>0.006042</td></tr><tr><td>&quot;Global Enterpr…</td><td>896</td><td>5</td><td>0.00558</td></tr><tr><td>&quot;Fast Track Inc…</td><td>374</td><td>2</td><td>0.005348</td></tr><tr><td>&quot;Infinite Solut…</td><td>436</td><td>2</td><td>0.004587</td></tr><tr><td>&quot;High Hopes Inc…</td><td>812</td><td>1</td><td>0.001232</td></tr></tbody></table></div>"
+      ],
+      "text/plain": [
+       "shape: (8, 4)\n",
+       "┌───────────────────────────┬─────────────────────┬─────────────┬──────────────────────────┐\n",
+       "│ company_name              ┆ number_of_employees ┆ posted_jobs ┆ posted_jobs_per_employee │\n",
+       "│ ---                       ┆ ---                 ┆ ---         ┆ ---                      │\n",
+       "│ str                       ┆ i64                 ┆ u32         ┆ f64                      │\n",
+       "╞═══════════════════════════╪═════════════════════╪═════════════╪══════════════════════════╡\n",
+       "│ Best Corp.                ┆ 229                 ┆ 4           ┆ 0.017467                 │\n",
+       "│ Bright Future Enterprises ┆ 222                 ┆ 3           ┆ 0.013514                 │\n",
+       "│ Echo Enterprises          ┆ 255                 ┆ 3           ┆ 0.011765                 │\n",
+       "│ Delta Inc.                ┆ 662                 ┆ 4           ┆ 0.006042                 │\n",
+       "│ Global Enterprises        ┆ 896                 ┆ 5           ┆ 0.00558                  │\n",
+       "│ Fast Track Inc.           ┆ 374                 ┆ 2           ┆ 0.005348                 │\n",
+       "│ Infinite Solutions        ┆ 436                 ┆ 2           ┆ 0.004587                 │\n",
+       "│ High Hopes Inc.           ┆ 812                 ┆ 1           ┆ 0.001232                 │\n",
+       "└───────────────────────────┴─────────────────────┴─────────────┴──────────────────────────┘"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(\n",
+    "    companies\n",
+    "    .join(jobs, on=\"company_id\")\n",
+    "    .filter(pl.col(\"state\").eq(\"posted\"))\n",
+    "    .group_by(\"company_name\", \"number_of_employees\")\n",
+    "    .agg(posted_jobs=pl.count(\"id\"))\n",
+    "    .with_columns(posted_jobs_per_employee=pl.col(\"posted_jobs\") / pl.col(\"number_of_employees\"))\n",
+    "    .sort(\"posted_jobs_per_employee\", descending=True)\n",
+    "    .collect()\n",
+    ")"
    ]
   },
   {
